--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -18,89 +18,96 @@
 
     <ImageView
         android:id="@+id/gameimage"
-        android:layout_width="368dp"
-        android:layout_height="281dp"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:layout_marginStart="500dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="32dp"
         android:src="@drawable/game0"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/word"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/newgame" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/word"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:letterSpacing="0.3"
         android:textSize="30sp"
         app:layout_constraintTop_toBottomOf="@id/gameimage"
-        />
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="298dp" />
+
 
     <TextView
         android:id="@+id/hinttext"
-        android:layout_width="match_parent"
+        android:layout_width="500dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/word"
-        android:textSize="25sp"
         android:gravity="center"
         android:text=""
-        />
-
+        android:textSize="25sp"
+        tools:layout_editor_absoluteY="338dp"
+        app:layout_constraintTop_toBottomOf="@+id/UtoZ"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <LinearLayout
         android:id="@+id/AtoE"
-        android:layout_width="match_parent"
+        android:layout_width="500dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/hinttext">
+        app:layout_constraintTop_toBottomOf="@id/hintbutton"
+        app:layout_constraintLeft_toLeftOf="parent"
+        >
 
         <Button
             android:id="@+id/a"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="20dp"
-            android:text="A" />
+            android:text="A"
+            android:textSize="20dp" />
 
         <Button
             android:id="@+id/b"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="20dp"
-            android:text="B" />
+            android:text="B"
+            android:textSize="20dp" />
 
         <Button
             android:id="@+id/c"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="20dp"
-            android:text="C" />
+            android:text="C"
+            android:textSize="20dp" />
 
         <Button
             android:id="@+id/d"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="20dp"
-            android:text="D" />
+            android:text="D"
+            android:textSize="20dp" />
 
         <Button
             android:id="@+id/e"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="20dp"
-            android:text="E" />
+            android:text="E"
+            android:textSize="20dp" />
     </LinearLayout>
-
 
     <LinearLayout
         android:id="@+id/FtoJ"
-        android:layout_width="match_parent"
+        android:layout_width="500dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/AtoE">
+        app:layout_constraintTop_toBottomOf="@id/AtoE"
+        app:layout_constraintLeft_toLeftOf="parent">
 
         <Button
             android:id="@+id/f"
@@ -145,10 +152,11 @@
 
     <LinearLayout
         android:id="@+id/KtoO"
-        android:layout_width="match_parent"
+        android:layout_width="500dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/FtoJ">
+        app:layout_constraintTop_toBottomOf="@id/FtoJ"
+        app:layout_constraintLeft_toLeftOf="parent">
 
         <Button
             android:id="@+id/k"
@@ -193,10 +201,11 @@
 
     <LinearLayout
         android:id="@+id/PtoT"
-        android:layout_width="match_parent"
+        android:layout_width="500dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/KtoO">
+        app:layout_constraintTop_toBottomOf="@id/KtoO"
+        app:layout_constraintLeft_toLeftOf="parent">
 
         <Button
             android:id="@+id/p"
@@ -241,10 +250,11 @@
 
     <LinearLayout
         android:id="@+id/UtoZ"
-        android:layout_width="match_parent"
+        android:layout_width="500dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/PtoT">
+        app:layout_constraintTop_toBottomOf="@id/PtoT"
+        app:layout_constraintLeft_toLeftOf="parent">
 
         <Button
             android:id="@+id/u"
