Debug - Orientation with different View Component

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,23 +35,13 @@
         app:layout_constraintTop_toBottomOf="@id/gameimage"
         />
 
-    <TextView
-        android:id="@+id/hinttext"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/word"
-        android:textSize="25sp"
-        android:gravity="center"
-        android:text=""
-        />
-
 
     <LinearLayout
         android:id="@+id/AtoE"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/hinttext">
+        app:layout_constraintTop_toBottomOf="@id/word">
 
         <Button
             android:id="@+id/a"
@@ -295,11 +285,14 @@
             android:text="Z" />
     </LinearLayout>
 
-    <Button
-        android:id = "@+id/hintbutton"
+    <TextView
+        android:id="@+id/result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="HINT!"
+        android:text=""
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/UtoZ" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
